@@ -52,6 +52,8 @@ Changes for 1.3.5.2
 -Added the Yoshi mode support for specified songs at the music.ini: mute selected track number without Yoshi, enable it back when Yoshi is presented
 -Fixed a bug when a last world map music is not remembered when sound is disabled
 -Fixed the wrong restart place when running the lasanha of levels and "restart level after death" option is enabled
+-Added option to show number of stars available/obtained in level on world map
+-Added option to render episode title onscreen
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
